--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <div class="container clearfix">
         <div class="footer-social">
-          <a class="social-btn social-btn-vk" href="https://vk.com/id42604988"></a>
+          <a class="social-btn social-btn-vk" href="#"></a>
           <a class="social-btn social-btn-fb" href="#"></a>
           <a class="social-btn social-btn-inst" href="#"></a>
           <div class="friend">Давайте дружить, это выгодно!</div>
